<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewSwitcher
        android:id="@+id/select_product_viewswitcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/select_product_progressbar" />

            <TextView
                android:id="@+id/select_product_text"
                android:text="@string/product_list_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/select_product_progressbar"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/select_product_error_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/select_product_text"
                android:layout_centerHorizontal="true"
                android:paddingTop="16dp"
                android:text="@string/select_product_error"
                android:visibility="invisible"/>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/select_product_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/select_product_products"
                android:layout_marginBottom="8dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:spinnerMode="dropdown"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/select_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Name">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/select_product_discription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Description">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:text="@string/select_manufacturer_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/select_product_manufacture"
                android:layout_marginBottom="8dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:spinnerMode="dropdown"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/select_product_manufacture_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Manufacture">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/select_product_error_creating"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_product_error_creating"
                android:visibility="invisible"/>

        </LinearLayout>
    </ViewSwitcher>
</LinearLayout>