<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/startupCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <!--Tool Bar-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <!--android:layout_gravity="fill_vertical"-->

        <com.tomhazell.aidtrackerapp.widget.UnscrollableViewPager
            android:id="@+id/startupViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->


    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/startupControls"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center|bottom"
        android:background="@android:color/darker_gray">

        <Button
            android:id="@+id/startupBack"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:drawableLeft="@drawable/ic_keyboard_arrow_left_black_48dp"
            android:text="@string/back"
            android:visibility="invisible" />

        <Button
            android:id="@+id/startupNext"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_black_48dp"
            android:text="@string/next" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
