...
            android:orientation="vertical">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/select_campaign_select"
                android:id="@+id/select_campaign_campaigns"
                android:layout_marginBottom="8dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:spinnerMode="dropdown"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/select_campaign_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Name">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
...
