...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/select_shipment_shipments"
                android:layout_marginBottom="8dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:spinnerMode="dropdown"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/select_shipment_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Name">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
...
